# BIT_Computer_Task02

./: .gitignore  1.txt  README.md  app.py  cli_test.txt  color.py  main.py  qshifter.py  requirements.txt  test.py  test.txt  ~$计软软工第一次汇报.1.pptx
lib/: rshifter-0.1.0-cp310-cp310-win_amd64.whl  rshifter-0.1.0-cp311-cp311-win_amd64.whl  rshifter-0.1.0-cp312-cp312-win_amd64.whl  rshifter-0.1.0-cp313-cp313-win_amd64.whl  rshifter-0.1.0-cp313-cp313t-win_amd64.whl  rshifter-0.1.0-cp38-cp38-win_amd64.whl  rshifter-0.1.0-cp39-cp39-win_amd64.whl  rshifter-0.1.0-pp310-pypy310_pp73-win_amd64.whl  rshifter-0.1.0-pp311-pypy311_pp73-win_amd64.whl  rshifter-0.1.0-pp39-pypy39_pp73-win_amd64.whl
qshifter/: __init__.py
rshifter/: Cargo.toml  pyproject.toml
rshifter/src/: color.rs  lib.rs  shifter.rs
static/: styles.css
templates/: base.html  form.html  result.html  result_file.html  search_result.html  test.html
test/: test_complex.txt  test_file.txt  test_oneline.txt
tmp/: output.txt
uploads/: body听声辩位.txt
