[package]
name = "rshifter"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rshifter"
crate-type = ["cdylib"]

[dependencies]

pyo3 = { version = "0.25.0", features = [
  "extension-module",
  "generate-import-lib",
] }
regex = "1.11.1"
